@startuml Services Class Diagram

package Services.AvengerServices
{
    abstract class IAvengerService
    {
        + getAllAvengers(): Future<ServiceResult<List<AvengerBO>>>
        + createAvenger (AvengerBO newHero): Future<ServiceResult<List<AvengerBO>>>
        + editAvenger (AvengerBO editAvenger): Future<ServiceResult<List<AvengerBO>>>
        + deleteAvenger (AvengerBO deleteAvenger): Future<ServiceResult<List<AvengerBO>>>

    }
}

package BOs.AvengerBO
{
    class AvengerBO
    {
        + id : int
        + name : String
    }
}

package Pages.HomeScreen
{
    class HomeScreenModel
    {
        + allAvengers : List<AvengerBO>
        + isAvengersLoading : bool
    }

}

BOs.AvengerBO.AvengerBO <-- HomeScreenModel: uses
BOs.AvengerBO.AvengerBO <-- IAvengerService: uses

@enduml